<resources>
    <string name="app_name">retrofitTutorial</string>
    <string name="homepage">Home page</string>
    <string name="categoriesPage">Categories</string>


    /* Button for MainActivity*/
    <string name="btnstring">"Press this button to get random chuck norris jokes"</string>
    <string name="categories">"Press this button to see categories for chuck norris jokes"</string>
    /* Button for Categories*/
    <string name="animal">Animal</string>
    <string name="career">Career</string>
    <string name="celebrity">Celebrity</string>
    <string name="dev">dev</string>
    <string name="explicit">Explicit</string>
    <string name="fashion">Fashion</string>
    <string name="food">Food</string>
    <string name="history">History</string>
    <string name="money">Money</string>
    <string name="movie">movie</string>
    <string name="music">Music</string>
    <string name="political">Political</string>
    <string name="religion">Religion</string>
    <string name="science">Science</string>
    <string name="sport">Sport</string>
    <string name="travel">travel</string>

</resources>